--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,6 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^10.3",
-        "phpstan/phpstan": "^1.10",
-        "saggre/phpdocumentor-markdown": "^0.1.3"
+        "phpstan/phpstan": "^1.10"
     }
 }
