--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,16 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "ext-json": "*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
             "MadisonSolutions\\JustDate\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.3",
+        "phpstan/phpstan": "^1.10"
     }
 }
